# Tosumu

./: .cline-worklog.md  .clinerules  .gitignore  Cargo.toml  DESIGN.md  Database.sln  ERRORS.md  INSPECT_API.md  README.md  REFERENCES.md  mkdocs.yml  requirements-docs.txt
.github/: copilot-instructions.md
.github/workflows/: docs.yml
crates/tosumu-bench/: Cargo.toml  build.rs
crates/tosumu-bench/benches/: btree_vs_sqlite.rs
crates/tosumu-cli/: Cargo.toml
crates/tosumu-cli/src/: cli_tests.rs  error_boundary.rs  inspect_cli_tests.rs  inspect_contract.rs  main.rs  unlock.rs  view.rs
crates/tosumu-cli/src/commands/: dispatch.rs  inspect.rs  mod.rs  protector.rs  store.rs  text.rs
crates/tosumu-cli/src/view/: render.rs  state.rs  tests.rs  watch.rs
crates/tosumu-core/: Cargo.toml
crates/tosumu-core/src/: btree.rs  crypto.rs  error.rs  format.rs  inspect.rs  lib.rs  page_store.rs  pager.rs  wal.rs
crates/tosumu-core/src/error/: codes.rs
crates/tosumu-sql/: Cargo.toml
crates/tosumu-sql/src/: ast.rs  catalog.rs  error.rs  executor.rs  lexer.rs  lib.rs  parser.rs  planner.rs  row_codec.rs  semantic.rs
docs/: CNAME  Tosumu Command Language.md  architecture.md  cli-reference.md  concepts.md  development.md  error-model.md  file-format.md  getting-started.md  index.md  inspect-api.md  roadmap.md  safety-and-limits.md  sql-implementation-plan.md
dotnet/: Invoke-TosumuDotNetChecks.ps1  New-TosumuHarnessTestDatabase.ps1  WpfHarness.DESIGN.md
dotnet/Tosumu.Cli/: README.md  Tosumu.Cli.csproj  TosumuCliTool.cs
dotnet/Tosumu.Cli.IntegrationTests/: PackagedCliTests.cs  Tosumu.Cli.IntegrationTests.csproj
dotnet/Tosumu.WpfHarness/: App.xaml  HarnessSessionState.cs  MainWindow.xaml  MainWindow.xaml.cs  Tosumu.WpfHarness.csproj  UnlockPromptWindow.xaml.cs
dotnet/Tosumu.WpfHarness/Assets/TreeView/: tree-view.html
dotnet/Tosumu.WpfHarness/Services/: HarnessDatabaseLoadCoordinator.cs  HarnessDiagnosticsController.cs  HarnessInspectClient.cs  HarnessInspectWorkflowCoordinator.cs  HarnessOperationRunner.cs  HarnessSessionCoordinator.cs  HarnessUnlockCoordinator.cs
dotnet/Tosumu.WpfHarness/State/: HarnessInspectPanePresenter.cs  HarnessInspectStateController.cs  HarnessRecentDatabaseSelectionController.cs  HarnessUnlockPanelController.cs
dotnet/Tosumu.WpfHarness/TreeView/: HarnessTreeInspectorState.cs  HarnessTreeWebViewController.cs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aead_frame.rs  fuzz_btree_operations.rs  fuzz_keyslot_parse.rs
