[workspace]
resolver = "2"
members = [
    "crates/tosumu-core",
    "crates/tosumu-cli",
    "crates/tosumu-bench",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Arakendo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arakendo/tosumu"
homepage = "https://github.com/Arakendo/tosumu"
readme = "README.md"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
bool_to_int_with_if = "allow"
borrowed_box = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
collapsible_else_if = "allow"
default_trait_access = "allow"
doc_lazy_continuation = "allow"
doc_markdown = "allow"
format_collect = "allow"
if_not_else = "allow"
io_other_error = "allow"
items_after_statements = "allow"
len_zero = "allow"
manual_clamp = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "allow"
needless_continue = "allow"
needless_pass_by_value = "allow"
print_literal = "allow"
redundant_closure_for_method_calls = "allow"
ref_option = "allow"
semicolon_if_nothing_returned = "allow"
single_match_else = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
unnecessary_lazy_evaluations = "allow"
unnecessary_wraps = "allow"
unnested_or_patterns = "allow"
wildcard_imports = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
